--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:thymeleaf": "npm run build && node thymeleaf-convert.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+
+
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "fs-extra": "^11.3.0"
   }
 }
